# internals/interface/handler/character.go
@@ -36,7 +36,7 @@ type GetCharactersWithEmmitionRateRequest struct {
 // @Router /character/list [get]
 // @Description 登録されているキャラクター一覧を取得します
 // @Accept application/json
-// @Success 200 {object} []*model.Character
+// @Success 200 {object} []model.Character
 // @Failure 400 {object} helper.Error
 func (ch *characterHandler) GetCharacters(c *gin.Context) {
 	characters, err := ch.characterUsecase.GetCharacters()
@@ -53,7 +53,7 @@ func (ch *characterHandler) GetCharacters(c *gin.Context) {
 // @Description 新しいキャラクターを作成します
 // @Accept application/json
 // @Param name body string true "name"
-// @Success 200 {object} *model.Character
+// @Success 200 {object} model.Character
 // @Failure 400 {object} helper.Error
 func (ch *characterHandler) Create(c *gin.Context) {
 	var req CreateCharacterRequest
@@ -81,7 +81,7 @@ func (ch *characterHandler) Create(c *gin.Context) {
 // @Description キャラクター一覧を排出率とともに取得します
 // @Accept application/json
 // @Param gachaId query string true "gachaId"
-// @Success 200 {object} []*model.CharacterWithEmmitionRate
+// @Success 200 {object} []model.CharacterWithEmmitionRate
 // @Failure 400 {object} helper.Error
 func (ch *characterHandler) GetWithEmmitionRate(c *gin.Context) {
 	var req GetCharactersWithEmmitionRateRequest
